--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
+    "multer": "^1.4.0",
     "prop-types": "latest",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
@@ -32,5 +34,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:4000/"
 }
